external-crates/move/crates/move-compiler/tests/development/enums/matching/match_type.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/match_type.move:3:17
  │
3 │     public enum Option<T> has drop {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

